<resources>
    <string name="app_name">KoleoDistancer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="druga_stacja">Druga stacja</string>
    <string name="pierwsza_stacja">Pierwsza stacja</string>
    <string name="dystans">Dystans</string>
    <string name="km">km</string>
    <string name="snakbar_startlabel">Wybierz stację i naciśnij przycisk aby obliczyć dystans</string>
</resources>